IN DEVELOPMENT ======= 1.3.1

- added: auto-creating directories when are needed (logs, databases)
- added: framework.config['directory-download']
- added: framework.routeDownload()
- added: controller.routeDownload()
- added: controller.currentDownload()
- added: @{currentDownload}
- added: String.prototype.sha256([salt])
- added: String.prototype.sha512([salt])
- added: controller.encrypt(value, key, [isUnique])
- added: controller.decrypt(value, key)
- added: framework.hash(type, value, [salt])
- added: controller.hash(type, value, [salt])
- added: controller.currentView()
- added: controller.currentTemplate()
- added: controller.currentContent()
- added: @{currentView()}
- added: @{currentTemplate()}
- added: @{currentContent()}
- added: restriction to the WebSocket

- updated: @{meta(title, [description], [keywords], [image])}
- updated: framework.route(url, fn, { timeout: false });
- updated: framework.onAuthorization(req, res/socket, flags, next)) (@next has 2 params, IsLogged {Boolean}, new: User {Object})
- updated: @{text}, @{password}, @{hidden}, @{textarea}, @{radio} @{checkbox}
- updated: String.prototype.sha1([salt])
- updated: String.prototype.md5([salt])
- (IMPORTANT) updated: String.prototype.encode() === HTML encode
- (IMPORTANT) updated: String.prototype.decode() === HTML decode

- fixed: increment/decrement Date/Time
- fixed: paths (~ char is changing the relative path to the absolute path)
- fixed: minifyHTML (<script>)
- fixed: SMTP authentification
- (IMPORTANT) fixed: WebSocket
- fixed: WebSocket (user, session, request)
- fixed: WebSocket routing

- removed: framework.config['directory-upload']
- removed: framework.verification()
- removed: framework.routeUpload()
- removed: controller.routeUpload()
- removed: controller.currentUpload()
- removed: @{currentUpload())

- (IMPORTANT) renamed: String.prototype.encode(value, key, [isUnique]) -> String.prototype.encrypt(value, key, [isUnique])